--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "@angular/ssr": "^20.1.4",
     "express": "^5.1.0",
     "firebase": "^11.10.0",
+    "primeicons": "^7.0.0",
+    "primeng": "^20.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
   },
