--- a/package.json
+++ b/package.json
@@ -23,19 +23,19 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "^20.1.0",
-    "@angular/compiler": "^20.1.0",
-    "@angular/core": "^20.1.0",
+    "@angular/animations": "^20.1.7",
+    "@angular/common": "^20.1.7",
+    "@angular/compiler": "^20.1.7",
+    "@angular/core": "^20.1.7",
     "@angular/fire": "^20.0.1",
-    "@angular/forms": "^20.1.0",
-    "@angular/platform-browser": "^20.1.0",
+    "@angular/forms": "^20.1.7",
+    "@angular/localize": "^20.1.7",
+    "@angular/platform-browser": "^20.1.7",
     "@angular/platform-server": "^20.1.0",
-    "@angular/router": "^20.1.0",
+    "@angular/router": "^20.1.7",
     "@angular/ssr": "^20.1.4",
     "express": "^5.1.0",
     "firebase": "^11.10.0",
-    "primeicons": "^7.0.0",
-    "primeng": "^20.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
   },
