--- a/firebase.indexes.json
+++ b/firebase.indexes.json
@@ -19,7 +19,25 @@
       "queryScope": "COLLECTION",
       "fields": [
         {
-          "fieldPath": "scope",
+          "fieldPath": "scope.scope",
+          "order": "ASCENDING"
+        },
+        {
+          "fieldPath": "createdAt",
+          "order": "DESCENDING"
+        }
+      ]
+    },
+    {
+      "collectionGroup": "projects",
+      "queryScope": "COLLECTION",
+      "fields": [
+        {
+          "fieldPath": "scope.scope",
+          "order": "ASCENDING"
+        },
+        {
+          "fieldPath": "createdBy",
           "order": "ASCENDING"
         },
         {
